tests/snapshots/signature_layout/empty_params.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/signature_layout/empty_params.input.py
---

