tests/snapshots/signature_layout/expand_on_length.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/signature_layout/expand_on_length.input.py
---
signature-layout@212..304
