tests/snapshots/signature_layout/idempotent.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/signature_layout/idempotent.input.py
---

