tests/snapshots/signature_layout/length_trigger_custom_budget.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/signature_layout/length_trigger_custom_budget.input.py
---
signature-layout@138..200
