tests/snapshots/signature_layout/length_trigger_custom_budget.input.py.snap
---
source: tests/integration.rs
expression: output
input_file: tests/fixtures/signature_layout/length_trigger_custom_budget.input.py
---
"""
A three-parameter signature whose inline form fits the default
`code-line-length` of 88 but overflows a custom budget of 50 expands
under the custom budget. Pins the line-length trigger consuming the
configured threshold rather than a hard-coded one.
"""


def render(
    left: LayoutLayer,
    right: LayoutLayer,
    palette: PaletteSpec,
):
    return (left, right, palette)
