tests/snapshots/signature_layout/no_trailing_comma.input.py.snap
---
source: tests/integration.rs
expression: output
input_file: tests/fixtures/signature_layout/no_trailing_comma.input.py
---
"""
Multi-line signature whose last parameter carries no trailing comma.
"""


def render(
    target,
    palette,
    layout,
    spread,
):
    return (target, palette, layout, spread)
