tests/snapshots/signature_layout/parameter_shapes.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/signature_layout/parameter_shapes.input.py
---
signature-layout@118..160
