tests/snapshots/signature_layout/parameter_shapes.input.py.snap
---
source: tests/integration.rs
expression: output
input_file: tests/fixtures/signature_layout/parameter_shapes.input.py
---
"""
Defaults, `/` and `*` separators, and a return-type annotation
round-trip through the expansion.
"""


def render(
    target,
    palette,
    /,
    *,
    layout,
    spread=None,
) -> tuple[int, str]:
    return (target, palette, layout, spread)
